<resources>
    <string name="app_name">F&amp;T_Android</string>
    <string name="annonces">Annonces:</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="nav_home">Home</string>
    <string name="nav_notif">Notification</string>
    <string name="nav_account">Account</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Annonces</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_new_ad">Nouvelle Annonce</string>
    <string name="title_account">Utilisateur</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="type_d_utilisateur">Type d\'Utilisateur</string>
    <string name="informations_utilisateur">Informations Utilisateur</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="mot_de_passe">Mot de Passe</string>
    <string name="nom_d_utilisateur">Nom d\'Utilisateur</string>
    <string name="ville">Ville</string>
    <string name="mettre_jour">Mettre à Jour</string>
    <string name="email">Email</string>
    <string name="titre">Titre</string>
    <string name="description">Description</string>
    <string-array name="Type">
        <item>Animaux</item>
        <item>Bricolage</item>
        <item>Electroménager</item>
        <item>Informatique</item>
        <item>Instruments de Musique</item>
        <item>Jardinage</item>
        <item>Jeux &amp; Jouets</item>
        <item>Mobilier</item>
        <item>Multimédia</item>
        <item>Sport</item>
        <item>Véhicules</item>
        <item>Vêtements</item>
    </string-array>
    <string-array name="type_annonce">
        <item>Don</item>
        <item>Echange</item>
    </string-array>
</resources>
